# SkyMate_MSA

./: pyproject.toml
skymate_msa/: main.py
skymate_msa/config/: config.py
skymate_msa/synchronizator/: main.py
