[tool.poetry]
name = "skymate-msa"
version = "0.1.0"
description = ""
authors = ["Wayfarer <conversionGSX@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
starlette-exporter = "^0.16.0"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
